# Neon-Agency

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-11-deepseek-dialogue-provider.md  2026-05-11-interactive-cli-sandbox.md  2026-05-11-llm-dialogue-adapter.md  2026-05-11-multi-event-system.md  2026-05-11-npc-relationship-system.md  2026-05-11-phase-1-social-reaction-simulator.md  2026-05-11-relationship-influenced-decisions.md  2026-05-11-template-dialogue-layer.md  2026-05-12-phase-7a-web-api.md  2026-05-12-phase-7b-web-ui.md  2026-05-12-phase-8a-break-the-script.md
docs/superpowers/specs/: 2026-05-11-deepseek-dialogue-provider-design.md  2026-05-11-interactive-cli-sandbox-design.md  2026-05-11-llm-dialogue-adapter-design.md  2026-05-11-multi-event-system-design.md  2026-05-11-npc-relationship-system-design.md  2026-05-11-phase-1-social-reaction-simulator-design.md  2026-05-11-relationship-influenced-decisions-design.md  2026-05-11-template-dialogue-layer-design.md
src/neon_agency/: __init__.py  agent_policy.py  api.py  cli.py  config.py  decision.py  dialogue.py  events.py  main.py  models.py  perception.py  rules.py  server.py  simulation.py
src/neon_agency/providers/: __init__.py  deepseek.py
src/neon_agency/web/: index.html
tests/: test_agent_policy.py  test_api.py  test_cli.py  test_config.py  test_deepseek_provider.py  test_dialogue.py  test_rules.py  test_server.py  test_simulation.py
