[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neon-agency"
version = "0.1.0"
description = "Agentic social reaction simulation prototype."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neon_agency = ["web/*.html"]
